--- a/Kapstondaw/BACKENDMONATO/modal.css
+++ b/Kapstondaw/BACKENDMONATO/modal.css
@@ -543,6 +543,7 @@
   flex-direction: column;
   margin-right: 10px;
 }
+
 .modal-layer-indigency-self .input-indigency-self input {
   height: 33px;
   padding-left: 5px;
@@ -1152,4 +1153,476 @@
 }
 .input-b-closure .label111 #business_owner_suffix{
   width: 15%;
+}
+
+/* MODAL EDIT MEMBER IN HOUSEHOLD */
+
+
+.Edit_Member {
+  display: flex;
+  z-index: 2;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  padding: 17% 0 0 10%;
+  display: none;
+}
+.formEditMember {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  border-radius: 20px;
+  background-color: #F8F8F8;
+  width: 85%;
+  height: auto;
+  
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.Edit_Member .headerInfo {
+  border-radius: 10px 10px 0px 0px;
+  background: #007236;
+  box-shadow: 0px -1px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: space-between;
+}
+.Edit_Member .headerInfo p {
+  color: #FFF;
+
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+
+  padding: 10px 15px;
+}
+.Edit_Member .headerInfo img {
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.Edit_Member .bodyInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+
+.Edit_Member .bodyInfo .leftInfo {
+  display: flex;
+  width: 50%;
+  padding: 20px 20px;
+  flex-wrap: wrap;
+}
+.Edit_Member .bodyInfo .leftInfo .inputFullname {
+  margin-bottom: 10px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputFullname p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .leftInfo .inputFullname p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .leftInfo .inputFullname input {
+  width: 25%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+.Edit_Member .bodyInfo .leftInfo .inputFullname .suffix {
+  width: 10%;
+}
+.Edit_Member .bodyInfo .leftInfo .inputDob {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputDob p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputDob p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .leftInfo .inputDob input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputPob {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputPob p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputPob p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .leftInfo .inputPob input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputCitizenship {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputCitizenship p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputCitizenship p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .leftInfo .inputCitizenship input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputPhoneNo {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputPhoneNo p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputPhoneNo input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputEmail {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .leftInfo .inputEmail p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.Edit_Member .bodyInfo .leftInfo .inputEmail input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+.Edit_Member .bodyInfo .rightInfo {
+  display: flex;
+  width: 50%;
+  flex-wrap: wrap;
+  padding: 20px 20px;
+}
+
+.Edit_Member .bodyInfo .rightInfo .inputAddress {
+  margin-bottom: 10px;
+}
+.Edit_Member .bodyInfo .rightInfo .inputAddress p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputAddress p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputAddress input {
+  width: 35%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+.Edit_Member .bodyInfo .rightInfo .inputAddress .houseNo {
+  width: 17%;
+}
+
+.Edit_Member .bodyInfo .rightInfo .inputOccupation {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .rightInfo .inputOccupation p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputOccupation p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputOccupation input {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+
+
+.Edit_Member .bodyInfo .rightInfo .inputSex {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .rightInfo .inputSex p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputSex p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputSex select {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+
+
+.Edit_Member .bodyInfo .rightInfo .inputCivilStatus {
+  margin-bottom: 10px;
+  margin-right: 3px;
+  width: 20%;
+}
+.Edit_Member .bodyInfo .rightInfo .inputCivilStatus p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputCivilStatus p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputCivilStatus select {
+  width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+.Edit_Member .bodyInfo .rightInfo .inputVoterStatus {
+  margin-bottom: 10px;
+  margin-right: 3px;
+  width: 20%;
+}
+.Edit_Member .bodyInfo .rightInfo .inputVoterStatus p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputVoterStatus p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputVoterStatus select {
+ width: 100%;
+  height: 28.5px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+}
+.Edit_Member .bodyInfo .rightInfo .inputProfile {
+  margin-bottom: 10px;
+  margin-right: 3px;
+}
+.Edit_Member .bodyInfo .rightInfo .inputProfile p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.Edit_Member .bodyInfo .rightInfo .inputProfile p span {
+  color: #E94949;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  }
+
+.Edit_Member .bodyInfo .rightInfo .inputProfile input {
+  width: 100%;
+  fill: #FFF;
+  height: 30px;
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.50);
+}
+
+.Edit_Member .footerInfo {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.Edit_Member .footerInfo .addSaTable {
+  width: auto;
+  padding: 5px 25px;
+  height: 30.836px;
+  color: #007236;
+  border: none;
+  border-radius: 5px;
+  background: #FFF;
+  border: solid 1px #007236;
+  cursor: pointer;
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 30px;
+  margin-bottom: 15px;
+}
+
+.Edit_Member .footerInfo .addSaTable:hover {
+  background-color: #007236;
+  color: wheat;
 }
