--- a/Kapstondaw/BACKENDMONATO/sidenav.css
+++ b/Kapstondaw/BACKENDMONATO/sidenav.css
@@ -4,20 +4,20 @@
 ::-webkit-scrollbar-track
 {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
-  background-color: #F5F5F5;
+  background-color: #252525;
   
 }
 
 ::-webkit-scrollbar
 {
   width: 10px;
-  background-color: #F5F5F5;
+  background-color: #252525;
 }
 
 ::-webkit-scrollbar-thumb
 {
   
-  background-color: #252525;
+  background-color: #474747;
   
 }
 
@@ -45,6 +45,9 @@ body {
   position: relative;
   z-index: 2;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  z-index: 4;
 }
 
 .layer1,
@@ -86,7 +89,7 @@ body {
 }
 
 .sidebar {
-  z-index: 1;
+  z-index: 3;
   display: flex;
   flex-direction: row;
   width: 75px;
