--- a/Kapstondaw/BACKENDMONATO/style3.css
+++ b/Kapstondaw/BACKENDMONATO/style3.css
@@ -572,7 +572,7 @@ tr:nth-child(even) {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding: 200px 0 0 25%;
+  padding: 15% 0 0 20%;
   display: none;
 }
 .modal-editBlotter {
@@ -586,7 +586,7 @@ tr:nth-child(even) {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding: 200px 0 0 25%;
+  padding: 15% 0 0 20%;
   display: none;
 }
 
@@ -718,6 +718,7 @@ tr:nth-child(even) {
   padding: 20px;
   overflow-y: auto;
   border-radius: 20px;
+
 }
 .form2Complain {
   display: flex;
@@ -746,7 +747,7 @@ tr:nth-child(even) {
   position: relative;
   flex-direction: column;
   background: #f8f8f8;
-  width: 700px;
+  width: 900px;
   height: 360px;
   padding: 20px;
   overflow: hidden;
@@ -848,6 +849,8 @@ select {
 .title-cont {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin-right: 5px;
 }
 
 .title-cont p {
@@ -892,20 +895,31 @@ select {
   display: flex;
   flex-direction: column;
 }
-.unang-layerBlotter input {
-  width: 150px;
+.unang-layerBlotter .input-cont-blotter {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.unang-layerBlotter .input-cont-blotter input {
+  width: 50%;
   height: 30px;
   margin-bottom: 10px;
+  margin-right: 5px;
+} 
+.unang-layerBlotter .input-cont-blotter #respondent_suffix, #complainant_suffix {
+  width: 20%;
 }
 .pangalawang-layerBlotter {
   display: flex;
   flex-direction: column;
 }
-.pangalawang-layerBlotter input {
+.pangalawang-layerBlotter input,select {
   width: 150px;
   height: 30px;
   margin-bottom: 10px;
+  margin-right: 5px;
 }
+
 .pangatlong-layerBlotter {
   display: flex;
   flex-direction: column;
@@ -914,16 +928,19 @@ select {
   width: 150px;
   height: 30px;
   margin-bottom: 10px;
+  margin-right: 5px;
 }
 .pangapat-layerBlotter {
   display: flex;
   flex-direction: column;
 }
-.pangapat-layerBlotter input {
+.pangapat-layerBlotter input,select {
   width: 150px;
   height: 30px;
   margin-bottom: 10px;
+  margin-right: 5px;
 }
+
 .panglima-layerBlotter {
   display: flex;
   flex-direction: column;
@@ -948,8 +965,11 @@ select {
 .unang-layer-to {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin-top: 20px;
   margin-bottom: 20px;
+  width: 100%;
+
   color: #000;
   font-family: Poppins;
   font-size: 13px;
@@ -960,54 +980,58 @@ select {
 .unang-left {
   display: flex;
   flex-direction: column;
-  width: 50%;
-}
-.unang-left #fullnameComplain,
-#timeComplain {
+ 
   width: 100%;
-  height: 25px;
 }
-.unang-left #fullnameComplain1,
-#timeComplain1 {
+.unang-left .input-complain222 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.unang-left .input-cont-complain {
+  display: flex;
+  flex-direction: row;
+}
+.unang-left .input-cont-complain2 {
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
+.unang-left .input-cont-complain2 #timeComplain, #dateComplain, #locationComplain, #timeComplain1, #dateComplain1, #locationComplain1 {
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
+.unang-left .input-cont-complain input {
+  width: 25%;
+  height: 30px;
+  margin-right: 5px;
+}
+
 .unang-left #fullnameAwareness,
 #timeAwareness {
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
 .unang-left #fullnameAwareness1,
 #timeAwareness1 {
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
 .unang-right {
-  width: 50%;
   display: flex;
   flex-direction: column;
-  margin-left: 150px;
+  background-color: blue;
 }
 
-.unang-right #locationComplain,
-#dateComplain {
-  width: 100%;
-  height: 25px;
-}
-.unang-right #locationComplain1,
-#dateComplain1 {
-  width: 100%;
-  height: 25px;
-}
 .unang-right #locationAwareness,
 #dateAwareness {
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
 .unang-right #locationAwareness1,
 #dateAwareness1 {
   width: 100%;
-  height: 25px;
+  height: 30px;
 }
 .pangalawang-layer-to {
   display: flex;
@@ -1035,9 +1059,14 @@ select {
 }
 .pangatlong-layer-to {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   margin-top: 20px;
-  width: 25%;
+  width: 100%;
+ 
+}
+.pangatlong-layer-to .statusComplain_cont {
+  display: flex;
+  flex-direction: column;
 
   color: #000;
   font-family: Poppins;
@@ -1045,6 +1074,23 @@ select {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+.pangatlong-layer-to .submit_cont  {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.pangatlong-layer-to .submit_cont button  {
+  padding: 6px 16px;
+  border: 1px solid #007236;
+  color: #007236;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.pangatlong-layer-to .submit_cont button:hover {
+  color: white;
+  background: #007236;
 }
 
 .unang-layer-user {
@@ -1179,16 +1225,7 @@ select {
   margin-top: 10px;
 }
 
-.form2Complain .submitComplain {
-  width: 89.744px;
-  height: 35.836px;
-  flex-shrink: 0;
-  color: white;
-  border-radius: 5px;
-  background: #007236;
-  margin-left: 420px;
-  margin-top: -35px;
-}
+
 .form2Awareness .submitAwareness {
   width: 89.744px;
   height: 35.836px;
