--- a/Kapstondaw/capstone-frontend/scss/layout/_index.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_index.scss
@@ -22,4 +22,5 @@
 @forward "active-menu";
 @forward "active-login";
 @forward "active-service";
+@forward "active-report";
 @forward "active-success";
