--- a/Kapstondaw/capstone-frontend/scss/layout/_active-report.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_active-report.scss
@@ -1,4 +1,4 @@
-.active-service {
+.active-report {
   background-color: rgba($color: #000000, $alpha: 0.25);
   border: none;
   display: none;
@@ -74,13 +74,14 @@
 
     .confirmation {
       background-color: #fff;
-      border: none;
-      border-radius: 1rem;
       display: none;
-      width: 300px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       align-items: center;
       justify-content: center;
-      padding: 1rem;
 
       .buttons {
         display: flex;
