--- a/Kapstondaw/capstone-frontend/scss/layout/_cart.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_cart.scss
@@ -10,7 +10,6 @@
       margin: 0 0 2rem;
     }
     .table-container {
-      position: relative;
       max-height: 500px;
       overflow-y: auto;
       scroll-behavior: smooth;
@@ -49,6 +48,46 @@
               .pick-up {
                 color: #007236;
                 background-color: rgba($color: #007236, $alpha: 0.1);
+              }
+              .cancel-container {
+                display: none;
+                background-color: rgba(0, 0, 0, 0.3);
+                backdrop-filter: blur(5px);
+                -webkit-backdrop-filter: blur(5px);
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100vh;
+                align-items: center;
+                justify-content: center;
+                .confirm-cancel-item {
+                  background-color: #fff;
+                  border: none;
+                  border-radius: 0.5rem;
+                  padding: 1rem;
+
+                  .buttons {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    button {
+                      padding: 0.5rem 1rem;
+                      border: none;
+                      border-radius: 0.2rem;
+                      font-weight: bold;
+                    }
+
+                    .btn1 {
+                      background-color: #007236;
+                      color: #fff;
+                    }
+                    .abort-cancel-item {
+                      background-color: #e9ecef;
+                    }
+                  }
+                }
               }
             }
             td > a {
